
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

Follow up to https://github.com/squirrel-sql-client/squirrel-sql-code/issues/46
SQL result and table export to MS-Excel files: The options to make header rows bold and centered did not
  work for MS-Excel but for Libre Office only.
  Details of the fix:
  - Apache-Poi was upgraded to version 5.3.0.
  - SQuirreL deliberately dropped dependency on Log4J in 2022. As Apache-Poi 5.3.0 directly depends
    on Log4J, SQuirreL now has a Log4J mock to make Apache-Poi 5.3.0 work.

#1530 Memory leak: SQL result tabs were not garbage collect as long as their Session was open.
  Note: When a result tab of an open Session gets garbage collected the following line appears is SQuirreL's logs:
  ...INFO ... Result tab finalized for open Session "<...>" with id=<...>

#1531 MySQL Plugin: SMALLINT UNSIGNED columns showed <Error> when the fields value exceeded 32767.
  Note: To work with MYSQL's SMALLINT UNSIGNED or TINYINT UNSIGNED types the MySQL Plugin must be installed.

SQL editor/SQL result tabs/marking SQL result tab headers:
  Memory and CPU usage was improved in case SQLs where compared
  disregarding comments line feeds and other white spaces.
  See menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/45#issuecomment-2455169657
  Fixed NullPointerException that occurred in some tables.

Saved Session groups management dialog: Fixed IllegalArgumentException when empty was deleted.

Fixed StringIndexOutOfBoundsException when executed SQL contains the German Umlaut sz.

Change tracking, left gutter popup to show deleted changes: