@@ -87,8 +87,8 @@ MemoryPanel.memSize={0} of {1} MB
 MemoryPanel.gcStatus={0}\n\nSessions waiting for garbage collection:\n==================================================\n{1}\nSessions open:\n==================================================\n{2}\nSessions garbage collected:\n==================================================\n{3}\n
 
 MemoryPanel.statusDialogTitle=Session garbage collection status
-MemoryPanel.sessionInfo.toString1=Session: ID={0}, Alias={1}: created at {2}, closed at {3}
-MemoryPanel.sessionInfo.toString2=Session: ID={0}, Alias={1}: created at {2}
-MemoryPanel.sessionInfo.toString3=Session: ID={0}, Alias={1}: created at {2}, closed at {3}, finalized at {4}
+MemoryPanel.sessionInfo.toString1.incl.res.tab=Session: ID={0}, Alias={1}: created at {2}, closed at {4}, number of finalized result tabs while open {3}
+MemoryPanel.sessionInfo.toString2.incl.res.tab=Session: ID={0}, Alias={1}: created at {2}, number of finalized result tabs while open {3}
+MemoryPanel.sessionInfo.toString3.incl.res.tab=Session: ID={0}, Alias={1}: created at {2}, closed at {4}, finalized at {5}, number of finalized result tabs while open {3}
 
 ThreadPanel.refresh=Refresh
